# anorak

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  openshift_config.md  pyproject.toml  test_client.py  test_redis_shards.py  test_rotation.py  test_shard_decrypt.py  test_time_window_expiry.py
k8s/: deployment.yaml
scripts/: init_shards.py
src/anorak/: main.py
src/anorak.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/anorak/api/routes/: admin.py  health.py  proxy.py
src/anorak/config/: settings.py
src/anorak/core/crypto/: encryption.py  handshake.py  master_key.py  redis_storage.py  shard.py
src/anorak/core/proxy/: middleware.py  passthrough.py  simple_auth.py  streaming.py
src/anorak/core/rotation/: engine.py
src/anorak/exceptions/: exceptions.py
src/anorak/utils/: logger.py  metrics.py
tests/: test_crypto.py
